--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
             <h1><a href="/">Fletcher's test Blog</a></h1>
         </div>
 
-        <div>
-            <p>published: 1/24/2018, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>No stinking italian for me.....</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
 
-        <div>
-            <p>published: 1/24/2018, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>This will be replaced very soon..... </p>
-        </div>
     </body>
 </html>
