--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,16 @@
-<html>
-    <head>
-        <title>Fletcher's blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Fletcher's test Blog</a></h1>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+
+        <div class="post">
+            <div class="date">
+                <p>published: {{ post.published_date }} by {{ post.author }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+            <hr>
         </div>
 
-        {% for post in posts %}
-            
-            <div>
-                <h2><a href="">{{ post.title }}</a>  </h2>
-                <p>published: {{ post.published_date }} by {{ post.author }}</p>
-                 <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-
-        {% endfor %}
-
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
